--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "shelljs": "^0.8.2"
   }
 }
