--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "html": "^1.0.0",
     "mongoose": "^5.0.1",
     "path": "^0.12.7",
     "shelljs": "^0.8.2"
